Ensured all tests pass on Fresh clone + Ticker Cache loads dynamically properly